site/_sass/_layout.scss
html {
    height: 100%;
    box-sizing: border-box;
}

*:before,
*:after {
  box-sizing: inherit;
}

header {
    margin: 30px 0;
}

body {
    position: relative;
    margin: 0;
    min-height: 100%;

    #page-content {
        margin-top: 30px;
    }
}

div.wrap {
   margin: 0 auto;
   padding-bottom: 150px;
 }

footer {
    position: absolute;
    right: 0;
    bottom: 0;
    left: 0;
    text-align: center;
    background-color: #202020;
	
    width: 100%;
    overflow:hidden;
    padding: 10px;

    #footer-logos {
        img {
            display: inline-block;
            height: 75px;
            width: auto;
        }
    }

    p, a, a:link, a:hover, a:visited {
        color: #999;
    }
}

@media screen and (max-width: 669px) {
    div.sidebar {
        display: block;
    }
	.sidebar-toggle {
		display: block;
	}
	header {
		display: none;
	}
	.wrap {
		width: 100%;
	}
	
	body {
		#page-content {
			margin: 30px;
		}
	}

}

@media screen and (min-width: 670px) {
    div.sidebar {
        display: none;
    }
	.sidebar-toggle {
		display: none;
	}
	header {
		display: block;
	}
}

